tests/baselines/reference/exportDefaultClassInNamespace.errors.txt
tests/cases/compiler/exportDefaultClassInNamespace.ts(2,12): error TS1319: A default export can only be used in an ECMAScript-style module.
tests/cases/compiler/exportDefaultClassInNamespace.ts(6,12): error TS1319: A default export can only be used in an ECMAScript-style module.


==== tests/cases/compiler/exportDefaultClassInNamespace.ts (2 errors) ====
    namespace ns_class {
        export default class {}
               ~~~~~~~
!!! error TS1319: A default export can only be used in an ECMAScript-style module.
    }
    
    namespace ns_abstract_class {
        export default abstract class {}
               ~~~~~~~
!!! error TS1319: A default export can only be used in an ECMAScript-style module.
    }
    